--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,14 @@
 version: 2
 
+build:
+  tools:
+    python: "3.9"
+
 sphinx:
   configuration: docs/source/conf.py
 
 formats: []
 
 python:
-  version: 3.8
   install:
     - requirements: requirements.txt
